created new edit show and index

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,17 @@
 <h1> Selected Article </h1>
 
 <p>
-Title: <%= @article.title%>
-Description <%=@article.description%>
+  Title: <%= @article.title%>
 </p>
+
+<p>
+  Description <%=@article.description%>
+</p>
+
+
+<div>
+  <%= link_to 'Edit', edit_article_path(@article) %>
+</div>
+<div>
+  <%= link_to 'Home', articles_path %>
+</div>
