--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit an article</h1>
 
 <% if @article.errors.any? %>
 <h2> Following errors prevented the article from being created. </h2>
@@ -26,7 +26,6 @@
 
 <% end %>
 
-<div>
+<p>
   <%= link_to 'Home', articles_path %>
-</div>
-
+</p>
