--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,11 @@
-<h1>Welcome to Alpha Blog</h1>
-
-<%= link_to 'Alpha Blog', articles_path %> |
-<%= link_to 'About', about_path %>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <div class="textbox">
+      <h1>
+        <span class="black">Criminal</span>
+        <span class="red">Minds</span>
+      </h1>
+      <p class="lead">News and Disccussion about episodes and cast.</p>
+    </div>
+  </div>
+</div>
