--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,20 @@
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.article-body {
+  border-top: 1px solid #eaeaea;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+.article-title {
+  font-size: 1.5;
+  font-weight: bold;
+}
+.description {
+  margin-top: 0;
+}
 .black {
   color: #000000;
   font-weight: bold;
