--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,32 +1,35 @@
 <%# partials for forms - file begins with _ %>
 
-<% if @article.errors.any? %>
-<h2> Following errors prevented the article from being created. </h2>
-  <ul> 
-    <% @article.errors.full_messages.each do |msg| %>
-      <li> <%= msg %> </li>
-    <% end %>
-    </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
-<%= form_for @article do |f| %>
-  <p>
-   <%= f.label :title%>
-   </br>
-    <%= f.text_field :title%>
-  </p>
-  <p>
-   <%= f.label :description%>
-   </br>
-    <%= f.text_area :description%>
-  </p>
-  <div>
-    <%= f.submit %>
+<div class='row'>
+  <div class='col-xs-12'>
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :title %>
+        </div>
+      <div class="col-sm-8">
+        <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+      </div>
+    </div>
+  <div class="form-group">
+    <div class="control-label col-sm-2">
+      <%= f.label :Body %>
+    </div>
+    <div class="col-sm-8">
+      <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: 'btn btn-primary btn-lg' %>
+    </div>
   </div>
 
 <% end %>
 
-<div>
-  <%= link_to 'Home', articles_path %>
+<div class="col-xs-2 col-xs-offset-2">
+  <%= link_to 'Return Home', articles_path %>
 </div>
 
