--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,17 +1,16 @@
-<h1> Selected Article </h1>
+<h1 align="center">Selected Case File</h1>
 
-<p>
-  Title: <%= @article.title%>
-</p>
-
-<p>
-  Description <%=@article.description%>
-</p>
-
-
-<div>
-  <%= link_to 'Edit', edit_article_path(@article) %>
-</div>
-<div>
-  <%= link_to 'Home', articles_path %>
-</div>
+<h2 align="center">Title:<%= @article.title %></h2>
+  <div class="well col-xs-8 col-xs-offset-2">
+    <h4 class="center description"><strong>File Notes:</strong></h4>
+      <hr>
+        <%= simple_format(@article.description) %>
+  
+    <div class="article-actions">
+      <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+      <%= link_to "Delete this article", article_path(@article), method: :delete,
+                                   data: { confirm: "Are you sure you want to delete the article?"},
+                                   class: "btn btn-xs btn-danger" %>
+      <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
+    </div>
+  </div>
