add user data to article show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,11 @@
   padding-top: 5px;
 }
 
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .article-body {
   border-top: 1px solid #eaeaea;
   padding-bottom: 15px;
